# LegislativeAI

./: .gitignore  Compare_oldvsnew.md  README.md  main.py  pyproject.toml  test_split.py
models/: models.py
services/: __init__.py  comments_parser.py  differ.py  embeddings_cache.py  extract_text.py  logging_setup.py  matcher.py  normalizer.py  pipeline.py  scorer.py  significance.py  split_text.py  target_identification.py
services/comments/: __init__.py  parser.py
services/comparison/: __init__.py  differ.py  matcher.py  pipeline.py  scorer.py  significance.py
services/documents/: __init__.py  pdf.py
services/documents/split_text/: __init__.py  preprocess.py  splitter.py
services/infra/: __init__.py  logging_setup.py
services/llm/: __init__.py  embeddings.py
services/target_identification/: __init__.py  article_io.py  narrow_targets.py  prompts.py  runtime.py  schemas.py  service.py
services/utils/: __init__.py  article_number.py
